feature: add SIMD support
doc: add detailed requirements for OpenCL